my secend commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="./styel/styel.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="container inline center-items justfu-center ">
+                <div class="logo">
+                    <img src="./logo/logo-light.png" alt="logo">
+                </div>
+                <div class="manus inline">
+                    <li>Home</li>
+                    <li>Blog</li>
+                    <li>Services</li>
+                    <li>Home 2</li>
+                </div>
+            </div>
+        </nav>
+        <div class="containar">
+            <div class="baner-text">
+                <h1>Better design for <br> your digital products</h1>
+                <p>We are a creative studio specializing in UI/UX design, development and strategy.
+                </p>
+                <button class="btn" type="button">Explore More</button>
+            </div>
+            <div class="baner-img">
+                <img src="./images/banner.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
